# google-api

./: .coverage  .env.example  .gitignore  .importlinter  AUTOMATION_GOALS.md  CHANGELOG.md  GEMINI.md  LIBRARY_STRATEGY.md  README.md  TODO.md  capture_mypy.py  mypy_errors.txt  mypy_errors_2.txt  mypy_full_errors.txt  mypy_report.txt  mypy_strict_errors.txt  pyproject.toml  pytest_output.txt  requirements.txt  test_temp.md
.agent/rules/: development-environment.md
.agent/workflows/: bootstrap_tests.md  ci_local.md  clean_reset.md  code_quality_audit.md  coverage_audit.md  cross_service_builder.md  daily_driver.md  debug_issue.md  development.md  emergency_fix.md  evolve.md  feature_kickoff.md  full_maintenance_cycle.md  health_check.md  ideate_innovations.md  plan_feature.md  propose_features.md  refactor.md  release_prep.md  scaffold_new_script.md  setup_auth.md  update_deps.md  update_docs.md  verify_installation.md  write_docstrings.md
.github/: copilot-instructions.md
.streamlit/: config.toml
conductor/: ai_ergonomics.md  backlog.md  context_map.md  product-guidelines.md  product.md  requirements.md  strategy.md  tech-stack.md  tracks.md  workflow.md
docs/: 02-credentials.md  CODE_REVIEW_2024-12.md  LOCAL_AUTH_NOTE_TEMPLATE.md  NewFeatureIdeas.md  code-review.md
docs/dev/: roadmap.md  (+3 more)
examples/: contacts_list.py  drive_list_files.py  drive_sync_folder.py  drive_upload_file.py  gmail_send_email.py  idempotent_email.py  sheets_append_row.py  sheets_batch_update.py  sheets_read_by_title.py  sheets_to_gmail_summary.py
goog/: __init__.py  auth.py  calendar_client.py  docs.py  drive.py  gmail.py  sheets.py  tasks.py  utils.py
mygoog_cli/: MANIFEST.md  appscript.py  auth.py  calendar.py  cli_entry.py  common.py  console.py  contacts.py  dev.py  docs.py  drive.py  gmail.py  gui.py  main.py  sheets.py  tasks.py  workflows.py
mygoog_gui/: MANIFEST.md  STATE_MACHINE.md  __init__.py  main.py  styles.py  theme_manager.py  workers.py
mygooglib/: __init__.py  app.py  appscript.py  auth.py  calendar.py  client.py  config.py  contacts.py  docs.py  drive.py  exceptions.py  gmail.py  sheets.py  tasks.py  workflows.py
scripts/: MANIFEST.md  benchmarker.py  check_token_refresh.py  generate_context_map.py  oauth_setup.py  profile_smoke_test.py  run_arch_lint.py  scaffold_cli.py  scaffold_service.py  scaffold_utils.py  smoke_test.py
tests/: MANIFEST.md  conftest.py  repro_issues.py  test_auth.py  test_cleanup_verification.py  test_config.py  test_docs_features.py  test_dry_run_foundation.py  test_global_search.py  test_gmail_attachments.py  test_new_features.py  test_retry.py  test_sheets_batch.py  test_sheets_batch_write.py  test_sheets_exists.py  test_sync_error.py  test_types_contract.py  test_vcr_integration.py  test_workflow_search.py
(+322 files in other folders)
