[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "goog"
version = "0.1.0"
description = "A Pythonic wrapper for Google APIs (Drive, Sheets, Docs, Calendar, Tasks, Gmail)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Brand" }
]
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-core>=2.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "vcrpy>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["goog"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py310"
