[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mygooglib"
version = "0.1.0"
description = "Personal Google APIs wrapper library"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client>=2.100",
    "google-auth>=2.20",
    "google-auth-oauthlib>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.1",
]

cli = [
    "typer>=0.12",
    "rich>=13",
]

[project.scripts]
mygoog = "mygooglib.cli:main"

[tool.setuptools.packages.find]
include = ["mygooglib*"]
