[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mygooglib"
version = "0.6.0"
description = "Personal Google APIs wrapper library"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client>=2.100",
    "google-auth>=2.20",
    "google-auth-oauthlib>=1.0",
    "tzdata",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.1",
    "mypy>=1.0",
]

cli = [
    "typer>=0.12",
    "rich>=13",
]

data = [
    "pandas>=2.0",
]

dashboard = [
    "streamlit>=1.30",
    "watchdog",
]

[project.scripts]
mygoog = "mygooglib.cli:main"

[tool.setuptools.packages.find]
include = ["mygooglib*"]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "googleapiclient.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google_auth_oauthlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "streamlit.*"
ignore_missing_imports = true
